--- a/loginmodule/templates/base.html
+++ b/loginmodule/templates/base.html
@@ -2,12 +2,13 @@
 <html> 
     <head> 
         <meta charset="utf­8"> 
-        <title>MyLogin!</title> 
+        <title>Blood bank!</title> 
     </head> 
     <body> 
         {% load static %}
         <link rel="stylesheet" type="text/css" href="{% static 'loginmodule/style.css' %}" />
-        <h1 align="center">Django Login test !</h1>
+        <h1 align="center" style="color: rgb(255, 255, 255); background-color: rgb(17, 85, 3);">Blood Bank Management System
+        </h1>
         {% block content %} 
         {% endblock %} 
     </body> 
