--- a/loginmodule/templates/logout.html
+++ b/loginmodule/templates/logout.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %} 
 {% block content %} 
     <h2> You are logged out! </h2> 
-    <p> Click <a href="/loginmodule/login/"> here </a> to login again. </p> 
+    <p> Click <a href="/login/"> here </a> to login again. </p> 
 {% endblock %}
