--- a/loginmodule/templates/loggedin.html
+++ b/loginmodule/templates/loggedin.html
@@ -1,5 +1,139 @@
-{%extends "base.html" %} 
-{% block content %} 
-    <h2> Welcome {{full_name}} you are logged in! </h2> 
-    <p> Click <a href="/loginmodule/logout/"</a> to logout </p>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" type="text/css" rel="stylesheet">
+
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .topnav {
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        .topnav a {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .topnav a.active {
+            background-color: #4CAF50;
+            color: white;
+        }
+    </style>
+
+    <title>BBMS</title>
+    <style>
+        body {
+            margin: 10px auto;
+            text-align: center;
+        }
+
+        .content {
+            max-width: 800px;
+            text-align: left;
+            margin: auto;
+        }
+
+        .simple-ss {
+            width: 100%;
+            height: 500px;
+            background-color: #eeeeee;
+            margin: auto;
+            background-image: url("https://static.timesofisrael.com/atlantajewishtimes/uploads/2015/07/should-you-donate-blood-01-640x400.jpg");
+            animation-name: slide;
+            animation-duration: 10s;
+            animation-direction: normal;
+            animation-timing-function: ease;
+            animation-iteration-count: infinite;
+        }
+
+        @keyframes slide {
+            0% {
+                background-position: 0 0;
+            }
+
+            16.66% {
+                background-position: 0 0;
+            }
+
+            33.32% {
+                background-position: -800px 0;
+            }
+
+            49.98% {
+                background-position: -800px 0;
+            }
+
+            66.64% {
+                background-position: -1600px 0;
+            }
+
+            83.30% {
+                background-position: -1600px 0;
+            }
+
+            100% {
+                background-position: 0 0;
+            }
+        }
+
+        footer {
+            text-align: center;
+            padding: 3px;
+            background-color: DarkSalmon;
+            color: white;
+        }
+
+        .u {
+            color: #eeeeee;
+            text-align: right;
+            padding: 15px;
+        }
+    </style>
+</head>
+
+<body>
+    
+    <h1 align="center" style="color: rgb(255, 255, 255); background-color: rgb(17, 85, 3);">Blood Bank Management System
+    </h1>
+    <div class="topnav">
+        <a class="active" href="">Home</a>
+        <a href="/search/ser/">Search</a>
+        <a href="/donorreg/donor-reg">Be a Donor</a>
+        <a href="#contact">About Us</a>
+        <a href="/loginmodule/logout/">Log Out</a>
+        <div class="u">Welcome {{full_name}}</div>
+    </div>
+
+
+
+    <div class="simple-ss"></div>
+    <div class="content">
+    </div>
+
+    <footer>
+        <p>Blood bank management System
+        <p>Author: <br>
+            <a href="mailto:hege@example.com">xyz@example.com</a>
+        </p>
+    </footer>
+
+</body>
+
+</html>
