--- a/loginmodule/templates/signup.html
+++ b/loginmodule/templates/signup.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Login Page </title>
+    <title>Signup Page </title>
     <style>
         Body {
             font-family: Calibri, Helvetica, sans-serif;
@@ -107,14 +107,14 @@
             <input type="text" name="username" value="" id="username" required><br />
             <label for="password"><b> Password:</b></label><br />
             <input type="password" name="password" value="" id="password" required><br />
-            <label for="password"><b> Email:</b></label><br />
-            <input type="email" name="email" value="" id="email" required><br />
-            <label for="password"><b> First Name:</b></label><br />
+            <label for="email"><b> Email:</b></label><br />
+            <input type="email" name="email" value="" id="email"><br />
+            <label for="fname"><b> First Name:</b></label><br />
             <input type="text" name="fname" value="" id="fname" required><br />
-            <label for="password"><b> Last Name:</b></label><br />
+            <label for="lname"><b> Last Name:</b></label><br />
             <input type="text" name="lname" value="" id="lname" required><br />
             <button type="submit" class="btn">SignUp</button>
-            <button type="reset" class="btn" )">Reset</button>
+            <button type="reset" class="btn">Reset</button>
         </div>
     </form>
     <br/>
