--- a/donorreg/templates/dreg.html
+++ b/donorreg/templates/dreg.html
@@ -100,7 +100,7 @@
         <a href="/loginmodule/loggedin/">Home</a>
         <a href="/search/ser/">Search</a>
         <a class="active" href="/donorreg/donor-reg">Be a Donor</a>
-        <a href="#contact">About Us</a>
+        <a href="/AboutUs/about/">About Us</a>
         <a href="/loginmodule/logout/">LogOut</a>
     </div>
     <h2>{{msg}}</h2>
