--- a/loginmodule/templates/loggedin.html
+++ b/loginmodule/templates/loggedin.html
@@ -116,7 +116,7 @@
         <a class="active" href="">Home</a>
         <a href="/search/ser/">Search</a>
         <a href="/donorreg/donor-reg">Be a Donor</a>
-        <a href="#contact">About Us</a>
+        <a href="/AboutUs/about/">About Us</a>
         <a href="/loginmodule/logout/">LogOut</a>
         <div class="u">Welcome {{full_name}}</div>
     </div>
