--- a/loginmodule/templates/loggedin.html
+++ b/loginmodule/templates/loggedin.html
@@ -96,8 +96,8 @@
         footer {
             text-align: center;
             padding: 3px;
-            background-color: DarkSalmon;
-            color: white;
+            background-color: rgb(148, 147, 147);
+            color: rgb(0, 0, 0);
         }
 
         .u {
@@ -109,7 +109,18 @@
 </head>
 
 <body>
-    
+
+    <style>
+        body {
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVmAbXTwe7dCvUm7LyTCpXsYDT4bdJzOZoZA&usqp=CAU');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 1550px;
+            background-position: center;
+            height: 500px;
+        }
+    </style>
+
     <h1 align="center" style="color: rgb(255, 255, 255); background-color: rgb(17, 85, 3);">Blood Bank Management System
     </h1>
     <div class="topnav">
