--- a/AboutUs/templates/about.html
+++ b/AboutUs/templates/about.html
@@ -46,45 +46,11 @@
             cursor: pointer;
         }
 
-        form {
-            border: 2px solid #110101;
-            width: 30%;
-
-        }
-
-        input[type=text],
-        input[type=password],
-        input[type=select],
-        input[type=email] {
-            width: 95%;
-            margin: 8px 10px;
-            padding: 12px 20px;
-            display: inline-block;
-            border: 1px solid rgb(4, 17, 4);
-            box-sizing: border-box;
-        }
-
-        button:hover {
-            opacity: 0.7;
-        }
-
-        .cancelbtn {
-            width: auto;
-            padding: 10px 18px;
-            margin: 10px 5px;
-        }
-
-
-        .container {
-            padding: 25px;
-            background-color: rgb(255, 255, 255);
-        }
-
         footer {
             text-align: center;
             padding: 3px;
-            background-color: DarkSalmon;
-            color: white;
+            background-color: rgb(148, 147, 147);
+            color: rgb(0, 0, 0);
         }
     </style>
 
@@ -103,42 +69,47 @@
         <a class="active" href="/AboutUs/about/">About Us</a>
         <a href="/loginmodule/logout/">LogOut</a>
     </div>
-    
-	
-	<style>
-body {
-  background-image: url('https://img.republicworld.com/republic-prod/stories/promolarge/xxhdpi/5h6aoboq9puz0qva_1592037240.jpeg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
-  background-size: 1550px;
-  background-position: center; 
-  height: 500px;
-}
-</style>
-	<p style="text-align:left;color:blue;font-family:cooper;">
-	A place where blood is collected from donors, typed, separated into components, stored, and prepared for 
-	<br>transfusion to recipients. A blood bank may be a separate free-standing facility or part of a larger laboratory in a hospital.
-	<br><br></p>
-	<p style="text-align:left;color:red;font-family:cooper;"><u><b>Who receives blood:</u></b><br> Accident victims, people undergoing surgery and patients receiving treatment 
-	<br>for leukemia, cancer or other diseases, such as sickle cell disease and thalassemia, all utilize blood. 
-	<br>Over 20 million units of blood components are transfused every year in the US.</p>
-	
-	<p style="text-align:left;color:green;font-family:cooper;"> <br><br><b><u>Giving blood to yourself:</u></b>
-	<br> Patients scheduled for surgery may be eligible to donate blood for themselves, 
-	<br>a process known as autologous blood donation. In the weeks before non-emergency surgery, 
-	<br>an autologous donor may be able to donate blood that will be stored until the surgical procedure.</p>
 
-	<p style="text-align:right;color:black;font-family:cooper;"><br><br><u><b>Separation of blood:</u></b></br> 
-	Typically, each donated unit of blood (whole blood) is separated into multiple components, such as
-	<br>red blood cells, plasma and platelets. Each component is generally transfused to a different individual, 
-	<br>each with different needs.
-	
-	</p><br><br>
+
+    <style>
+        body {
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVmAbXTwe7dCvUm7LyTCpXsYDT4bdJzOZoZA&usqp=CAU');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 1550px;
+            background-position: center;
+            height: 500px;
+        }
+    </style>
+    <p style="text-align:left;color:blue;font-family:cooper;">
+        A place where blood is collected from donors, typed, separated into components, stored, and prepared for
+        <br>transfusion to recipients. A blood bank may be a separate free-standing facility or part of a larger
+        laboratory in a hospital.
+        <br><br>
+    </p>
+    <p style="text-align:left;color:red;font-family:cooper;"><u><b>Who receives blood:</u></b><br> Accident victims,
+        people undergoing surgery and patients receiving treatment
+        <br>for leukemia, cancer or other diseases, such as sickle cell disease and thalassemia, all utilize blood.
+        <br>Over 20 million units of blood components are transfused every year in the US.
+    </p>
+
+    <p style="text-align:left;color:green;font-family:cooper;"> <br><br><b><u>Giving blood to yourself:</u></b>
+        <br> Patients scheduled for surgery may be eligible to donate blood for themselves,
+        <br>a process known as autologous blood donation. In the weeks before non-emergency surgery,
+        <br>an autologous donor may be able to donate blood that will be stored until the surgical procedure.
+    </p>
+
+    <p style="text-align:right;color:black;font-family:cooper;"><br><br><u><b>Separation of blood:</u></b></br>
+        Typically, each donated unit of blood (whole blood) is separated into multiple components, such as
+        <br>red blood cells, plasma and platelets. Each component is generally transfused to a different individual,
+        <br>each with different needs.
+
+    </p><br><br>
 
     <footer>
         <p>Blood bank management System
-        <p>Author: <a href="mailto:hege@example.com">xyz@example.com</a>
-        </p>
+        <p>Author: </p>
+        <a href="mailto:hege@example.com">xyz@example.com</a>
     </footer>
 
 </body>
