--- a/loginmodule/templates/home_base.html
+++ b/loginmodule/templates/home_base.html
@@ -49,7 +49,7 @@
         footer {
             text-align: center;
             padding: 3px;
-            background-color: DarkSalmon;
+            background-color: rgb(148, 147, 147);
             color: rgb(0, 0, 0);
         }
     </style>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="container">
-        <img src="{% static 'img/b.jpg' %}" style="width:100%; height: 500px;">
+        <img src="{% static 'img/home.jpg' %}" style="width:100%; height: 500px;">
         <div class="top-left">
             <h3>Why do we donate blood?</h3>
             <p>It is not more painful than losing a loved one that you may save by donating!</p>
