--- a/loginmodule/templates/logout.html
+++ b/loginmodule/templates/logout.html
@@ -1,5 +1,83 @@
-{%extends "base.html" %} 
-{% block content %} 
-    <h2> You are logged out! </h2> 
-    <p> Click <a href="/login/"> here </a> to login again. </p> 
-{% endblock %}
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        .topnav {
+            overflow: hidden;
+            background-color: rgb(0, 0, 0);
+        }
+
+        .topnav a {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        .topnav a:hover {
+            background-color: #ddd;
+            color: rgb(231, 15, 15);
+        }
+
+        .topnav a.active {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .container {
+            position: relative;
+            text-align: center;
+            color: rgb(0, 0, 0);
+        }
+
+        .top-left {
+            position: absolute;
+            top: 8px;
+            left: 16px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 3px;
+            background-color: rgb(148, 147, 147);
+            color: rgb(0, 0, 0);
+        }
+    </style>
+</head>
+
+<body>
+    <style>
+        body {
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVmAbXTwe7dCvUm7LyTCpXsYDT4bdJzOZoZA&usqp=CAU');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 1550px;
+            background-position: center;
+            height: 500px;
+        }
+    </style>
+    <h1 align="center" style="color: rgb(255, 255, 255); background-color: rgb(17, 85, 3);">Blood Bank Management System
+    </h1>
+    <br />
+    <h2> You are logged out! </h2>
+    <p> Click <a href="/login/"> here </a> to login again. </p>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <footer>
+        <p>Blood bank management System
+        <p>Author: <br>
+            <a href="mailto:hege@example.com">xyz@example.com</a>
+        </p>
+    </footer>
+</body>
+
+</html>
