--- a/loginmodule/templates/signup.html
+++ b/loginmodule/templates/signup.html
@@ -42,12 +42,13 @@
             margin: 10px 10px;
             border: none;
             cursor: pointer;
+            border: 1px solid rgb(4, 17, 4);
         }
 
         form {
             border: 2px solid #110101;
             width: 30%;
-            
+
         }
 
         input[type=text],
@@ -74,19 +75,29 @@
 
         .container {
             padding: 25px;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(235, 141, 125);
         }
 
         footer {
             text-align: center;
             padding: 3px;
-            background-color: DarkSalmon;
-            color: white;
+            background-color: rgb(148, 147, 147);
+            color: rgb(0, 0, 0);
         }
     </style>
 </head>
 
 <body>
+    <style>
+        body {
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVmAbXTwe7dCvUm7LyTCpXsYDT4bdJzOZoZA&usqp=CAU');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 1550px;
+            background-position: center;
+            height: 500px;
+        }
+    </style>
 
     {% if form.errors %}
     <p class="error"> Invalid Details </p>
@@ -99,25 +110,27 @@
         <a class="active" href="">SignUp</a>
         <a href="/login/">Login</a>
     </div>
-    <h2>SignUp Here!</h2>
+    <center>
+        <h2 style="border:2px solid Tomato;font-family:jokerman;color:red;">SIGN UP HERE</h2>
 
-    <form action="/signup_add/" method="post">{% csrf_token %}
-        <div class="container">
-            <label for="username"><b> username :</b></label><br />
-            <input type="text" name="username" value="" id="username" required><br />
-            <label for="password"><b> Password:</b></label><br />
-            <input type="password" name="password" value="" id="password" required><br />
-            <label for="email"><b> Email:</b></label><br />
-            <input type="email" name="email" value="" id="email"><br />
-            <label for="fname"><b> First Name:</b></label><br />
-            <input type="text" name="fname" value="" id="fname" required><br />
-            <label for="lname"><b> Last Name:</b></label><br />
-            <input type="text" name="lname" value="" id="lname" required><br />
-            <button type="submit" class="btn">SignUp</button>
-            <button type="reset" class="btn">Reset</button>
-        </div>
-    </form>
-    <br/>
+        <form action="/signup_add/" method="post">{% csrf_token %}
+            <div class="container">
+                <label for="username"><b> username :</b></label><br />
+                <input type="text" name="username" value="" id="username" placeholder="username" required><br />
+                <label for="password"><b> Password:</b></label><br />
+                <input type="password" name="password" value="" id="password" placeholder="password" required><br />
+                <label for="email"><b> Email:</b></label><br />
+                <input type="email" name="email" value="" id="email" placeholder="email"><br />
+                <label for="fname"><b> First Name:</b></label><br />
+                <input type="text" name="fname" value="" id="fname" placeholder="first name" required><br />
+                <label for="lname"><b> Last Name:</b></label><br />
+                <input type="text" name="lname" value="" id="lname" placeholder="last name" required><br />
+                <button type="submit" class="btn">SignUp</button>
+                <button type="reset" class="btn">Reset</button>
+            </div>
+        </form>
+    </center>
+    <br />
     <footer>
         <p>Blood bank management System
         <p>Author: <br>
