--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -129,6 +129,16 @@ body {
 	<br><br>
 	
     <center><form action="/donorreg/add-donor/" method="post">
+	<style>
+body {
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVmAbXTwe7dCvUm7LyTCpXsYDT4bdJzOZoZA&usqp=CAU');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: 1550px;
+  background-position: center; 
+  height: 500px;
+}
+</style>
         <div class="container">
             
             <label for="bgroup"><b> blood group : </b></label>
