--- a/loginmodule/templates/loggedin.html
+++ b/loginmodule/templates/loggedin.html
@@ -126,7 +126,7 @@
     <div class="topnav">
         <a class="active" href="">Home</a>
         <a href="/search/ser/">Search</a>
-        <a href="/donorreg/donor-reg">Be a Donor</a>
+        <a href="/donorreg/donor-reg?uname={{full_name}}/">Be a Donor</a>
         <a href="/AboutUs/about/">About Us</a>
         <a href="/loginmodule/logout/">LogOut</a>
         <div class="u">Welcome {{full_name}}</div>
